# grimoire

./: .dockerignore  .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  BUILDPLAN.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: .env.example  REMOTE.md  docker-compose.yml  grimoire.service
design/project_hub_roar/: code.html
design/the_arcane_grimoire/: DESIGN.md
design/the_constellation_home/: code.html
design/the_review_sanctum/: code.html
design/tome_system_architecture/: code.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  state.tsx  theme.ts  useLive.ts
frontend/src/components/: Constellation.tsx  KnowledgeScribe.tsx  NodeDetailPanel.tsx  ScribeModal.tsx  SideNav.tsx
frontend/src/components/planner/: AddItemDialog.tsx  InlineEdit.tsx  PlannerChat.tsx
frontend/src/views/: Flow.tsx  Home.tsx  ProjectHub.tsx  Sanctum.tsx  Settings.tsx  Today.tsx  TomeReader.tsx
grimoire/: __init__.py  api.py  backup.py  compaction.py  config.py  distill.py  gateway.py  reembed.py  scribe.py  service.py
grimoire/planner/: __init__.py  anchors.py  chat_router.py  goals.py  habits.py  schedule.py  schema.sql  store.py  tasks.py  urgency.py  web.py
grimoire/providers/: __init__.py  base.py  fake.py  fallback.py  groq.py  ollama.py
grimoire/store/: __init__.py  repository.py  schema.sql
grimoirev2tasks/: ARCHITECTURE.md  BUILDPLAN.md  CLAUDE.md
grimoirev2tasks/designv2/stitch_grimoire_productivity_dashboard/arcane_precision/: DESIGN.md
scripts/: backfill.py  compact.py  dev.sh  seed.py  serve-mcp.sh  serve.sh  verify_ollama.py
tests/: test_phase0.py  test_phase1.py  test_planner.py  test_scribe.py
(+1 files in other folders)
